[workspace]
members = [
    "crates/core",
    "crates/inference",
    "crates/edge",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
anyhow     = "1.0.95"
ndarray    = { version = "0.16", features = ["rayon"] }
ort        = { version = "2.0", features = ["load-dynamic", "cpu"] }
tokio      = { version = "1.43", features = ["full"] }
tracing    = "0.1"
tracing-subscriber = "0.3"

[workspace.package]
edition       = "2021"
rust-version  = "1.85"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/Electric-Service-Repair/Electrician"

[lints.clippy]
all            = "warn"
pedantic       = "warn"
nursery        = "warn"
cargo          = "warn"
perf_panic     = "deny"
